manifests/media/radarr/spec-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srv
spec:
  template:
    spec:
      containers:
      - name: srv

        image: linuxserver/radarr
        ports:
        - containerPort: 7878
          name: http
          protocol: TCP

        resources:
          requests:
            memory: 150Mi
            cpu: 25m
          limits:
            memory: 500Mi
            cpu: 1000m

        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: library
          mountPath: /movies

      volumes:
      - name: config
        hostPath:
          path: /tank/data/radarr
          type: Directory
      - name: downloads
        hostPath:
          path: /tank/media/movies/downloads
          type: Directory
      - name: library
        hostPath:
          path: /tank/media/movies/library
          type: Directory
