manifests/media/radarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  serviceName: radarr
  volumeClaimTemplates: []
  replicas: 1
  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      annotations:
        vk.podman.io/systemd.radarr: 'false'
        vk.podman.io/volume-selinux.config: relabel-private
    spec:

      nodeSelector:
        kubernetes.io/role: pet
        kubernetes.io/hostname: pet-ausbox

      tolerations:
      - key: kubernetes.io/pet-node
        operator: Exists
        effect: NoSchedule

      containers:

      - name: radarr
        image: linuxserver/radarr

        ports:
        - containerPort: 7878
          name: http
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: library
          mountPath: /movies

      volumes:
      - name: config
        hostPath:
          path: /tank/data/radarr
          type: Directory
      - name: downloads
        hostPath:
          path: /tank/media/movies/downloads
          type: Directory
      - name: library
        hostPath:
          path: /tank/media/movies/library
          type: Directory
