manifests/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
