manifests/media/radarr/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr-int
  annotations:
    kubernetes.io/ingress.class: wg69
    external-dns.alpha.kubernetes.io/ttl: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.69.1.1/24,10.69.4.67/32
    cert-manager.io/cluster-issuer: wg69-issuer
spec:
  tls:
  - hosts:
    - radarr.int.wg69.net
    secretName: tls-radarr.int.wg69.net
  rules:
  - host: radarr.int.wg69.net
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: http
  - host: radarr.wg69.elrod.me
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: http
